# resynthesis-watermark-limits

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ACCEPTANCE_GATE.md  RELATED_WORK.md  THEORY.md
experiments/: README.md  _common.py  e0_surrogate.py  make_e1_figures.py  make_e2_figures.py  run_all.py  run_audio_all.py
experiments/audio/: _tune_invariant.py  analysis.py  attackers.py  baselines.py  data_io.py  e1_converse_audio.py  e1_survival.py  e2_achievability_audio.py  e2_predictor.py  e2_stats.py  e3_payload_poc.py  marks.py  metrics_audio.py  model_lock.py  repro.py  watermarks_audio.py
experiments/audio/tests/: test_e2_inference.py
paper/: macros_audio.tex  main.bbl  main.tex  refs.bib  tab_e1.tex
results/: e0_surrogate.json  e1_audio.json  e1_sc_knnvc_a.json  e1_sc_knnvc_b.json  e1_survival_audioseal.json  e1_survival_silentcipher.json  e1_survival_silentcipher_a.json  e1_survival_silentcipher_b.json  e1_survival_wavmark.json  e2_audio.json  e2_predictor.json  e2_predictor_seed1.json  e2_predictor_seed2.json  e3_payload_poc.json
scripts/: capture_model_lock.py  check_macros_reproducible.py  check_no_pending.sh  make_manifest.py  make_paper_macros.py  merge_e1_shards.py  prefetch_audioseal.py  recompute_e1_speaker_ci.py  remote.py  rethreshold_e1.py
src/rwl/: __init__.py  capacity.py  channel.py  chernoff.py  masking.py  watermark.py
tests/: test_achievability.py  test_channel.py  test_chernoff.py  test_converse.py  test_theory_vs_sim.py
