[project]
name = "rwl"
version = "0.1.0"
description = "The Resynthesis Channel: fundamental limits of speech watermarking against generative laundering (matched converse + achievability)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Weiping Yan" }]
keywords = [
  "signal-processing", "audio-watermarking", "generative-ai", "provenance",
  "information-theory", "data-processing-inequality", "hypothesis-testing",
  "voice-conversion", "neural-vocoder", "icassp",
]

# Core dependencies: the theory + Monte-Carlo verification are CPU-only (numpy/scipy).
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
# Empirical audio instantiation (E1-E4). Heavy; run on the GPU server.
audio = [
  "soundfile>=0.12",
  "librosa>=0.10",
  "torch>=2.1",
  "torchaudio>=2.1",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rwl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
